body overflow fixes

--- a/assets/css/src/base.css
+++ b/assets/css/src/base.css
@@ -19,7 +19,8 @@ body {
     padding-bottom: 10px;
     color: var(--color-primary);
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-rendering: optimizeLegibility
+    text-rendering: optimizeLegibility;
+    overflow-x: hidden;
 }
 
 small {
